<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/story_detail_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/story_detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="Story Detail"
                app:titleTextColor="@android:color/white">

            </androidx.appcompat.widget.Toolbar>

            <ProgressBar
                android:id="@+id/story_detail_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:theme="@style/ProgressBarStyle"
                android:visibility="gone"
                android:indeterminate="true"
                style="?android:attr/progressBarStyleHorizontal"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/story_detail_appbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".view.StoryDetail">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/story_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="56dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="56dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Ask HN: What's the hardest problem you've ever solved?" />

                    <ImageView
                        android:id="@+id/story_detail_star_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="-3dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="13dp"
                        android:src="@drawable/ic_star"
                        tools:ignore="ContentDescription" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/story_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:textSize="18sp"
                    tools:text="by ularb0yz" />

                <TextView
                    android:id="@+id/story_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="17/08/2020" />

                <TextView
                    android:id="@+id/description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:text="@string/description_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/story_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="16sp"
                    tools:text="I'll keep an eye on this one. I'm hopeful because we need something like this, but man it's going to be hard with LOTS of problems on both sides of the line. Guys who get labeled as fake who didn't deserve it and guys who should be labeled not getting it. All the false positive/negatives will have a terrible time. " />

                <TextView
                    android:id="@+id/comments_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/comments_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/no_comments_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/no_comments_text"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/story_detail_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="32dp"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/layout_story_detail" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>